--- a/app/templates/includes/components/typebox-section.twig
+++ b/app/templates/includes/components/typebox-section.twig
@@ -65,11 +65,11 @@
 {% endif %}
 
 {% if theme == "blue" %}
-	<div class="typebox-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+	<div class="typebox-section wave-bg" uk-scrollspy="cls: wave-anim">
 		<div class="uk-container">
 			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Виды упаковки</h2>
 
-			<ul class="typebox-list">
+			<ul class="typebox-list" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
 
 				<li class="item">
 					<div class="item__img">
@@ -129,11 +129,28 @@
 {% endif %}
 
 {% if theme == "pink" %}
-	<div class="typebox-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+	<div class="typebox-section wave-bg" uk-scrollspy="cls: wave-anim">
 		<div class="uk-container">
 			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Виды упаковки</h2>
 
-			<ul class="typebox-list">
+			<ul class="typebox-list" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="typebox-bg-img">
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<img data-src="img/media/box-type-17.png" alt="" uk-img>
+						</div>
+					</div>
+					<div class="item__text">
+						<div class="title-h3">Junior 15 C2 <br> — для самых активных</div>
+						<div class="item__subtitle">10 яиц СВ (75+ грамм)</div>
+					</div>
+				</li>
 
 				<li class="item">
 					<div class="item__img">
@@ -147,11 +164,27 @@
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Junior 15 C2 — для самых активных</div>
+						<div class="title-h3">Junior 15 C2 <br> — для самых активных</div>
 						<div class="item__subtitle">15 яиц С2 (45-54,9 грамм)</div>
 					</div>
 				</li>
 
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="typebox-bg-img">
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<img data-src="img/media/box-type-18.png" alt="" uk-img>
+						</div>
+					</div>
+					<div class="item__text">
+						<div class="title-h3">Junior 15 C2 <br> — для самых активных</div>
+						<div class="item__subtitle">15 яиц СО (65-74,9 грамм)</div>
+					</div>
+				</li>
 			</ul>
 
 		</div>
