--- a/app/templates/ugodie.twig
+++ b/app/templates/ugodie.twig
@@ -16,10 +16,10 @@
 {% block content %}
 
 	{% include './includes/components/main-banner.twig' with {'data': data} %}
-	{% include './includes/components/advantages-section.twig' %}
-	{% include './includes/components/advantages-h-section.twig' with {'theme': 'green'} %}
+	{% include './includes/components/advantages-section.twig' with {'theme': 'blue'} %}
+	{% include './includes/components/advantages-h-section.twig' with {'theme': 'blue'} %}
 
-	{% include './includes/components/typebox-section.twig' with {'theme': 'green'} %}
+	{% include './includes/components/typebox-section.twig' with {'theme': 'blue'} %}
 	{% include './includes/components/brands-slider.twig' %}
 	{% include './includes/components/time-section.twig' %}
 	{% include './includes/components/slider-section.twig' %}
