--- a/app/sass/content/advantages-h-list.scss
+++ b/app/sass/content/advantages-h-list.scss
@@ -53,6 +53,11 @@
 				left: 50%;
 				z-index: 15;
 				transform: translate(-50%, -50%);
+				width: 100%;
+				height: 100%;
+				display: flex;
+				align-items: center;
+				justify-content: center;
 			}
 		}
 		&__text {
