--- a/app/sass/content/typebox-section.scss
+++ b/app/sass/content/typebox-section.scss
@@ -68,8 +68,8 @@
 				img {
 					max-width: 100%;
 					max-height: 100%;
-					width: 100%;
-					height: 100%;
+					//width: 100%;
+					//height: 100%;
 				}
 			}
 		}
@@ -77,6 +77,14 @@
 			text-align: center;
 			font-size: 18px;
 			line-height: 24px;
+			br {
+				@media (min-width: $mob-xs) {
+					display: none;
+				}
+				@media (min-width: $tablet-w) {
+					display: block;
+				};
+			}
 		}
 		&__subtitle {
 			font-size: 16px;
