--- a/app/sass/global/typography.scss
+++ b/app/sass/global/typography.scss
@@ -29,9 +29,15 @@ h2, .title-h2 {
 
 h3, .title-h3 {
 	margin-bottom: 15px;
-	font-size: 24px;
-	line-height: 29px;
 	font-weight: bold;
+	@media (min-width: $mob-xs) {
+		font-size: 20px;
+		line-height: 24px;
+	}
+	@media (min-width: $desk-w) {
+		font-size: 24px;
+		line-height: 29px;
+	};
 }
 
 h4, .title-h4 {
