--- a/app/templates/includes/components/advantages-h-section.twig
+++ b/app/templates/includes/components/advantages-h-section.twig
@@ -82,14 +82,126 @@
 {% endif %}
 
 {% if theme == "blue" %}
-<div class="test1">
-	123
+<div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+	<div class="uk-container">
+		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Большим яйцам — специальная упаковка</h2>
+		<ul class="advantages-h-list advantages-h-list--three-items">
+			<li class="item">
+				<div class="item__img">
+					<div class="bg-img">
+						<svg width="100%" height="100%" class="adv-bg-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-1"></use>
+						</svg>
+					</div>
+					<div class="content-img">
+						<svg width="80px" height="93px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-1"></use>
+						</svg>
+					</div>
+				</div>
+				<div class="item__text">
+					Прочная упаковка выдержит кастрюлю, поставленную сверху
+				</div>
+			</li>
+
+			<li class="item">
+				<div class="item__img">
+					<div class="bg-img">
+						<svg width="100%" height="100%" class="adv-bg-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-2"></use>
+						</svg>
+					</div>
+					<div class="content-img">
+						<svg width="80px" height="63px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-8"></use>
+						</svg>
+					</div>
+				</div>
+				<div class="item__text">
+					Cпециальная упаковка для особо крупных яиц (СВ)
+				</div>
+			</li>
+
+			<li class="item">
+				<div class="item__img">
+					<div class="bg-img">
+						<svg width="100%" height="100%" class="adv-bg-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-3"></use>
+						</svg>
+					</div>
+					<div class="content-img">
+						<svg width="97px" height="80px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-9"></use>
+						</svg>
+					</div>
+				</div>
+				<div class="item__text">
+					Упаковка повышенной прочности для яиц большого размера
+				</div>
+			</li>
+		</ul>
+	</div>
 </div>
 {% endif %}
 
 {% if theme == "pink" %}
-<div class="test1">
-	123
+<div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+	<div class="uk-container">
+		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Упаковка</h2>
+		<ul class="advantages-h-list advantages-h-list--three-items">
+			<li class="item">
+				<div class="item__img">
+					<div class="bg-img">
+						<svg width="100%" height="100%" class="adv-bg-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-1"></use>
+						</svg>
+					</div>
+					<div class="content-img">
+						<svg width="80px" height="81px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-2"></use>
+						</svg>
+					</div>
+				</div>
+				<div class="item__text">
+					Экологичная упаковка из переработанной бумаги
+				</div>
+			</li>
+
+			<li class="item">
+				<div class="item__img">
+					<div class="bg-img">
+						<svg width="100%" height="100%" class="adv-bg-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-2"></use>
+						</svg>
+					</div>
+					<div class="content-img">
+						<img src="img/icon-svg/adv-icon-10.svg" alt="">
+					</div>
+				</div>
+				<div class="item__text">
+					Яркая красочная упаковка
+				</div>
+			</li>
+
+			<li class="item">
+				<div class="item__img">
+					<div class="bg-img">
+						<svg width="100%" height="100%" class="adv-bg-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-3"></use>
+						</svg>
+					</div>
+					<div class="content-img">
+						<svg width="80px" height="97px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-4"></use>
+						</svg>
+					</div>
+				</div>
+				<div class="item__text">
+					Защита от случайных падений
+				</div>
+			</li>
+		</ul>
+	</div>
 </div>
 {% endif %}
 
