--- a/app/templates/includes/components/advantages-section.twig
+++ b/app/templates/includes/components/advantages-section.twig
@@ -1,7 +1,9 @@
-	<section class="advantages-section">
+
+	{% if theme == 'green' %}
+	<section class="advantages-section ">
 		<div class="uk-container">
 			<div class="advantages-section__inner">
-				<ul class="advantages-list">
+				<ul class="advantages-list advantages-list--six-items">
 					<li>
 						<div class="advantage-item">
 							<div class="advantage-item__img">
@@ -114,3 +116,162 @@
 			</div>
 		</div>
 	</section>
+	{% endif %}
+
+
+	{% if theme == 'blue' %}
+	<section class="advantages-section advantages-section--blue">
+		<div class="uk-container">
+			<div class="advantages-section__inner">
+				<ul class="advantages-list advantages-list--four-items">
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-15.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Самое большое содержание белка</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-16.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Натурально и вкусно как в деревне</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-17.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Выбор мужской аудитории по исследованиям потребителей</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-18.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Только самые крупные яйца используются в производстве марки (СО и С1)</div>
+							</div>
+						</div>
+					</li>  
+				</ul>
+				<div class="center-box">
+					<svg width="100%" height="100%" class="yellow-ellipse-1">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-3"></use>
+					</svg>
+					<svg width="100%" height="100%" class="yellow-ellipse-2">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-4"></use>
+					</svg>
+					<img src="img/media/advantage-img/egg-blue.png" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+	{% endif %}
+
+	{% if theme == 'pink' %}
+	<section class="advantages-section advantages-section--pink">
+		<div class="uk-container">
+			<div class="advantages-section__inner">
+				<ul class="advantages-list advantages-list--five-items">
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-19.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Максимум пользы при небольшом размере</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-20.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Яйца только от самых молодых и активных курочек (С2)</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-21.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Лучше всего подходит в кулинарии, поскольку эффективнее взбивается и держит форму</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-22.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">ТКуры несушки High-line Brown</div>
+							</div>
+						</div>
+					</li>  
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-23.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Любимые персонажи на упаковке</div>
+							</div>
+						</div>
+					</li> 
+				</ul>
+				<div class="center-box">
+					<svg width="100%" height="100%" class="yellow-ellipse-1">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-3"></use>
+					</svg>
+					<svg width="100%" height="100%" class="yellow-ellipse-2">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-4"></use>
+					</svg>
+					<img src="img/media/advantage-img/egg-pink.png" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+	{% endif %}
