--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -16,7 +16,7 @@
 {% block content %}
 
 	{% include './includes/components/main-banner.twig' with {'data': data} %}
-	{% include './includes/components/advantages-section.twig' %}
+	{% include './includes/components/advantages-section.twig' with {'theme': 'green'} %}
 	{% include './includes/components/advantages-h-section.twig' with {'theme': 'green'} %}
 
 	{% include './includes/components/typebox-section.twig' with {'theme': 'green'} %}
