--- a/app/sass/content/main-banner.scss
+++ b/app/sass/content/main-banner.scss
@@ -3,7 +3,21 @@
 
 .main-banner {
 	position: relative;
-	margin-bottom: 70px;
+	margin-bottom: 100px;
+	picture {
+		position: absolute;
+		top: 0;
+		left: 50%;
+		width: 100%;
+		height: 100%;
+		transform: translateX(-50%);
+		img {
+			@include object-fit;
+		}
+	}
+	@media (min-width: $tablet-w) {
+		margin-bottom: 120px;
+	};
 	&>.uk-container {
 		@media (min-width: $mob-xs) {
 			padding: 0;
