--- a/app/sass/sliders/sliders.scss
+++ b/app/sass/sliders/sliders.scss
@@ -202,6 +202,12 @@
 				display: block;
 			}
 		}
+		.slide {
+			text-align: center;
+			img {
+				display: inline-block;
+			}
+		}
 		button {
 			width: 0;
 			height: 0;
