--- a/app/templates/includes/components/advantages-section.twig
+++ b/app/templates/includes/components/advantages-section.twig
@@ -231,7 +231,7 @@
 								<img data-src="img/media/advantage-img/advantage-img-21.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Лучше всего подходит в кулинарии, поскольку эффективнее взбивается и держит форму</div>
+								<div class="title-h3">Эффективно взбивается и держит форму</div>
 							</div>
 						</div>
 					</li>
