--- a/app/sass/content/advantages-list.scss
+++ b/app/sass/content/advantages-list.scss
@@ -55,7 +55,7 @@
 				&:nth-child(1) {
 					.advantage-item__img {
 						img {
-							top: 40px;
+							top: 30px;
 						}
 					}
 				}
@@ -170,8 +170,8 @@
 		transition: opacity .3s, transform 1.2s, top 1.2s, bottom 1.2s, left 1.2s, right 1.2s ease-out;
 		will-change: transform, top, bottom, left, right;
 		width: 100%;
-		max-width: 230px;
 		margin: 0 auto;
+		max-width: 230px;
 		&:before {
 			position: absolute;
 			top: 50%;
@@ -221,6 +221,7 @@
 				img {
 					top: 40px;
 					left: 30px;
+					transform: translateX(0);
 				}
 			}
 		}
@@ -344,7 +345,6 @@
 					left: 50%;
 					transform: translate(-50%, 50%);
 					transition-delay: 1.2s;
-					width: 355px;
 				}
 				&:nth-child(4) {
 					top: 50%;
@@ -374,7 +374,7 @@
 					}
 					&:nth-child(3) {
 						bottom: 0;
-						transform: translate(15%, -35%);
+						transform: translate(25%, -60%);
 					}
 					&:nth-child(4) {
 						left: 20px;
@@ -488,6 +488,8 @@
 		}
 		img {
 			position: absolute;
+			left: 50%;
+			transform: translateX(-50%);
 			z-index: 15;
 		}
 	}
