--- a/app/templates/includes/header/main-nav.twig
+++ b/app/templates/includes/header/main-nav.twig
@@ -4,7 +4,7 @@
 	<div class="uk-container">
 		<ul class="main-nav">
 			<li>
-				<a href="#">
+				<a href="/">
 					<svg width="82px" height="59px" class="nav-ellipse">
 					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-1"></use>
 					</svg>
@@ -12,7 +12,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="ugodie.html">
 					<svg width="233px" height="71px" class="nav-ellipse">
 					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-2"></use>
 					</svg>
@@ -25,7 +25,7 @@
 				</span>
 			</li>
 			<li>
-				<a href="#">
+				<a href="junior.html">
 					<svg class="nav-ellipse">
 					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-3"></use>
 					</svg>
@@ -33,7 +33,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="nov.html">
 					<svg class="nav-ellipse">
 					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-4"></use>
 					</svg>
