--- a/app/templates/includes/components/advantages-section.twig
+++ b/app/templates/includes/components/advantages-section.twig
@@ -275,3 +275,76 @@
 		</div>
 	</section>
 	{% endif %}
+
+
+	{% if theme == 'brown' %}
+	<section class="advantages-section advantages-section--blue">
+		<div class="uk-container">
+			<div class="advantages-section__inner">
+				<ul class="advantages-list advantages-list--four-items">
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-24.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Необходимый продукт в рационе каждого члена семьи и незаменимый в кулинарии</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-25.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Качество по разумной цене</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-26.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Производство в соответствии с ГОСТ 31654-2012</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-27.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Широкий ассортимент категорий</div>
+							</div>
+						</div>
+					</li>  
+				</ul>
+				<div class="center-box">
+					<svg width="100%" height="100%" class="yellow-ellipse-1">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-3"></use>
+					</svg>
+					<svg width="100%" height="100%" class="yellow-ellipse-2">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-4"></use>
+					</svg>
+					<img src="img/media/advantage-img/egg-brown.png" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+	{% endif %}
