--- a/app/templates/includes/components/advantages-h-section.twig
+++ b/app/templates/includes/components/advantages-h-section.twig
@@ -206,7 +206,64 @@
 {% endif %}
 
 {% if theme == "brown" %}
-<div class="test1">
-	123
+<div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+	<div class="uk-container">
+		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Большим яйцам — специальная упаковка</h2>
+		<ul class="advantages-h-list advantages-h-list--three-items">
+			<li class="item">
+				<div class="item__img">
+					<div class="bg-img">
+						<svg width="100%" height="100%" class="adv-bg-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-1"></use>
+						</svg>
+					</div>
+					<div class="content-img">
+						<svg width="80px" height="93px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-2"></use>
+						</svg>
+					</div>
+				</div>
+				<div class="item__text">
+					Экологичная упаковка из переработанной бумаги
+				</div>
+			</li>
+
+			<li class="item">
+				<div class="item__img">
+					<div class="bg-img">
+						<svg width="100%" height="100%" class="adv-bg-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-2"></use>
+						</svg>
+					</div>
+					<div class="content-img">
+						<svg width="123px" height="86px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-11"></use>
+						</svg>
+					</div>
+				</div>
+				<div class="item__text">
+					Самый распространённый вид упаковки на полках магазинов
+				</div>
+			</li>
+
+			<li class="item">
+				<div class="item__img">
+					<div class="bg-img">
+						<svg width="100%" height="100%" class="adv-bg-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-3"></use>
+						</svg>
+					</div>
+					<div class="content-img">
+						<svg width="112px" height="32px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-12"></use>
+						</svg>
+					</div>
+				</div>
+				<div class="item__text">
+					Дополнительные ребра жесткости для надежной транспортировки
+				</div>
+			</li>
+		</ul>
+	</div>
 </div>
 {% endif %}
